@@ -7,6 +7,8 @@ ALL CHANGES:
   TEZ-1742. Improve response time of internal preemption
   TEZ-1749. Increase test timeout for TestLocalMode.testMultipleClientsWithSession
   TEZ-1745. TestATSHistoryLoggingService::testATSHistoryLoggingServiceShutdown can be flaky.
+  TEZ-1747. Increase test timeout for TestSecureShuffle.
+  TEZ-1746. Flaky test in TestVertexImpl and TestExceptionPropagation.
 
 Release 0.5.2: Unreleased
 
